# SSTD

./: .gitignore  CMakeLists.txt  README.md  StepanData.pro  main.cpp  stepandoublelist.h  stepanlist.cpp  stepanlist.h  stepanqueue.cpp  stepanstack.cpp  stepanvector.h
List/: README.md  SList.h
Queue/: README.md  SQueue.h
Stack/: README.md  SStack.h
Vector/: SVector.h
project/List/: SList.h  stepandoublelist.cpp  stepandoublelist.h
project/Vector/: README.md  SVector.h  stepanvector.cpp  stepanvector.h
project/include/: stepanqueue.h  stepanstack.h
project/src/: main.cpp  stepandoublelist.cpp  stepanlist.cpp  stepanqueue.cpp  stepanstack.cpp  stepanvector.cpp
