cmake_minimum_required(VERSION 3.4)
project(main)

set(CMAKE_CXX_STANDARD 17)

add_executable(main
#        ./project/include/stepandoublelist.h
#        ./project/include/stepanlist.h
#        ./project/include/stepanqueue.h
#        ./project/include/stepanstack.h
        ./project/include/stepanvector.h
        ./project/src/main.cpp
#        ./project/src/stepandoublelist.cpp
#        ./project/src/stepanlist.cpp
#        ./project/src/stepanqueue.cpp
#        ./project/src/stepanstack.cpp
#        ./project/src/stepanvector.cpp
        )